spacing issues

--- a/src/ui-components/timeline.scss
+++ b/src/ui-components/timeline.scss
@@ -9,6 +9,13 @@
   }
   section {
   }
+  .form-group {
+    margin-bottom: 10px;
+  }
+  .add-bottom {
+  }
+  label {
+  }
 }
 
 .time-picker {
